--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ PyAudio==0.2.11
 pyparsing==2.2.0
 python-dateutil==2.7.3
 pytz==2018.5
-requests==2.19.1
+requests>=2.20.0
 rsa==3.4.2
 selenium==3.14.0
 six==1.11.0
